# v4-whitebox

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  build.rs
.github/workflows/: ci.yml
abi-v4/GetUniswapV4PoolData.sol/: GetUniswapV4PoolData.json
abi-v4/GetUniswapV4TickData.sol/: GetUniswapV4TickData.json
contracts/: foundry.toml
contracts/cache/: solidity-files-cache.json
contracts/src/: GetUniswapV4TickData.sol
crates/common/: Cargo.toml
crates/uni-v4-common/: Cargo.toml
crates/uni-v4-common/src/: lib.rs  pool_key.rs  pools.rs  pools_impl.rs  shared_pools.rs  traits.rs  updates.rs
crates/uni-v4-structure/: Cargo.toml
crates/uni-v4-structure/src/: lib.rs  liquidity_base.rs  pool_swap.rs  ray.rs
crates/uni-v4-upkeeper/: Cargo.toml  build.rs
crates/uni-v4-upkeeper/src/: baseline_pool_factory.rs  fetch_pool_keys.rs  lib.rs  pool_data_loader.rs  pool_key.rs  pool_manager_service.rs  pool_manager_service_builder.rs  pool_registry.rs  pools.rs  slot0.rs
crates/uni-v4-upkeeper/src/pool_providers/: mod.rs  pool_update_provider.rs
examples/: Cargo.toml  pool_manager_builder_example.rs  pool_manager_example.rs  pool_manager_http.rs  pool_manager_initialization_only.rs  pool_manager_with_blocks.rs  pool_manager_with_channel.rs  pool_manager_with_slot0_stream.rs  pool_manager_without_slot0_stream.rs  pool_service_config.rs  swap.rs  test_channel_mode.rs
src/: lib.rs
src/contract_payloads/: rewards.rs
src/uni_structure/: donation.rs  liquidity_base.rs  mod.rs  pool_swap.rs  ray.rs  sqrt_pricex96.rs  tick_info.rs
src/uniswap/: baseline_pool_factory.rs  fetch_pool_keys.rs  mod.rs  pool.rs  pool_data_loader.rs  pool_factory.rs  pool_key.rs  pool_manager.rs  pool_manager_service.rs  pool_manager_service_builder.rs  pool_registry.rs  pools.rs  slot0.rs
src/uniswap/loaders/: mod.rs
src/uniswap/pool_providers/: completed_block_stream.rs  mock_block_stream.rs  mod.rs  pool_update_provider.rs  provider_adapter.rs
tests/: integration_test.rs  mainnet_pool_swap_test.rs  mod.rs
tests/integration/: mod.rs  pool_manager_service.rs  sepolia_constants.rs  simple_test.rs
