[package]
name = "uni-v4"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.13", features = [
  "rlp",
  "full",
  "node-bindings",
  "rpc-types-debug",
  "rpc-types-trace",
  "json-rpc",
  "rpc-client",
  "sol-types",
  "contract",
] }
alloy-primitives = { version = "1.2.0", default-features = false, features = [
  "map-foldhash",
  "rand",
] }
jsonrpsee = { version = "0.25.1", features = ["ws-client", "macros"] }
arraydeque = "0"
auto_impl = "1"
base64 = "0.22"
dashmap = { version = "6", features = ["serde"] }
eyre = "0"
futures = "0"
futures-util = "0"
hex = "0.4.3"
itertools = "0"
malachite = "0.4"
malachite-q = "0.4"
pade = { git = "https://github.com/SorellaLabs/pade.git", branch = "main" }
pade-macro = { git = "https://github.com/SorellaLabs/pade.git", branch = "main" }
rand = "0.9.0"
rayon = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "^1.44.2", features = [
  "full",
  "tracing",
], default-features = false }
tracing = "0"
tracing-subscriber = "0.3.19"
uniswap_v3_math = { git = "https://github.com/SorellaLabs/v3-math", branch = "main" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
serial_test = "3.0"

[features]
default = []
integration = []

[build-dependencies]
convert_case = "0"
itertools = "0"
