[workspace]
members = [".", "crates/*", "examples"]
resolver = "2"

[package]
name = "angstrom-v4"
version.workspace = true
edition.workspace = true

[dependencies]
uni-v4-common = { path = "crates/uni-v4-common" }
uni-v4-structure = { path = "crates/uni-v4-structure" }
uni-v4-upkeeper = { path = "crates/uni-v4-upkeeper" }

# Re-export all the dependencies that downstream users might need
alloy.workspace = true
alloy-primitives.workspace = true
jsonrpsee.workspace = true
eyre.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
integration = []

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Sorella Labs"]
repository = "https://github.com/SorellaLabs/uni-v4"

[workspace.dependencies]
# Internal crates
uni-v4-common = { path = "crates/uni-v4-common" }
uni-v4-structure = { path = "crates/uni-v4-structure" }
uni-v4-upkeeper = { path = "crates/uni-v4-upkeeper" }

# External dependencies
alloy = { version = "1.0.13", features = [
  "rlp",
  "full",
  "node-bindings",
  "rpc-types-debug",
  "rpc-types-trace",
  "json-rpc",
  "rpc-client",
  "sol-types",
  "contract",
] }
alloy-primitives = { version = "1.2.0", default-features = false, features = [
  "map-foldhash",
  "rand",
] }
jsonrpsee = { version = "0.25.1", features = ["ws-client", "macros"] }
arraydeque = "0"
async-trait = "0.1"
auto_impl = "1"
base64 = "0.22"
dashmap = { version = "6", features = ["serde"] }
eyre = "0"
futures = "0"
futures-util = "0"
hex = "0.4.3"
itertools = "0"
malachite = "0.4"
malachite-q = "0.4"
pade = { git = "https://github.com/SorellaLabs/pade.git", branch = "main" }
pade-macro = { git = "https://github.com/SorellaLabs/pade.git", branch = "main" }
rand = "0.9.0"
rayon = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "^1.44.2", features = [
  "full",
  "tracing",
], default-features = false }
tracing = "0"
tracing-subscriber = "0.3.19"
uniswap_v3_math = { git = "https://github.com/SorellaLabs/v3-math", branch = "main" }
