[package]
name = "uni-v4-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "pool_manager_with_slot0_stream"
path = "pool_manager_with_slot0_stream.rs"

[[bin]]
name = "pool_manager_without_slot0_stream"
path = "pool_manager_without_slot0_stream.rs"

[[bin]]
name = "pool_manager_with_channel"
path = "pool_manager_with_channel.rs"

[[bin]]
name = "test_channel_mode"
path = "test_channel_mode.rs"

[dependencies]
# Internal dependencies
uni-v4-common.workspace = true
uni-v4-upkeeper.workspace = true

# External dependencies
alloy.workspace = true
alloy-primitives.workspace = true
eyre.workspace = true
futures.workspace = true
jsonrpsee.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
