[package]
name = "uni-v4-upkeeper"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
uni-v4-common.workspace = true
uni-v4-structure.workspace = true

# External dependencies
alloy.workspace = true
alloy-primitives.workspace = true
jsonrpsee.workspace = true
arraydeque.workspace = true
async-trait.workspace = true
auto_impl.workspace = true
base64.workspace = true
dashmap.workspace = true
eyre.workspace = true
futures.workspace = true
futures-util.workspace = true
hex.workspace = true
itertools.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uniswap_v3_math.workspace = true

[build-dependencies]
convert_case = "0"
itertools.workspace = true